2008-09-23  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/rtsp/gstrtspmessage.c:
	(gst_rtsp_message_parse_request),
	(gst_rtsp_message_parse_response):
	Fix the g_return_val_if_fail() statements.

2008-09-22  Michael Smith <msmith@songbirdnest.com>

	* gst-libs/gst/tag/gsttagdemux.c:
	  Fail to activate if there's insufficient data in the file to be usable,
	  preventing an assertion fail later. Fixes #552960

2008-09-15  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/pbutils/descriptions.c:
	* gst/typefind/gsttypefindfunctions.c:
	  Recognise Kate subtitle streams (#550582).

2008-09-13  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/audio/audio.h: (GST_AUDIO_FIELD_SIGNED):
	  Remove trailing comma from enum list, which causes problems
	  with -pendantic (#550729).

2008-09-10  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.20.2 pre-release

	* po/LINGUAS:
	* po/id.po:
	* po/pt_BR.po:

	New translations.

2008-09-05  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/interfaces/propertyprobe.c:
	  (gst_property_probe_get_properties),
	  (gst_property_probe_get_property),
	  (gst_property_probe_probe_property),
	  (gst_property_probe_probe_property_name),
	  (gst_property_probe_needs_probe),
	  (gst_property_probe_needs_probe_name),
	  (gst_property_probe_get_values),
	  (gst_property_probe_get_values_name),
	  (gst_property_probe_probe_and_get_values),
	  (gst_property_probe_probe_and_get_values_name):
	  More sanity checks for our second-favourite interface.

2008-09-05  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/interfaces/propertyprobe.c:
	  Check for NULL pointer, in the hope that this fixes #532864.

2008-09-05  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_class_init):
	  No really, the next release is 0.10.21 (fix Since: tags in docs).

2008-09-04  Wim Taymans  <wim.taymans@collabora.co.uk>
